classDiagram

namespace gestion_rh{
class Personne {
    + id: int 
    + nom: String 
    + prenom: String 
}
class Formateur 
class Apprenant
}


namespace gestion_authentifications {
class Utilisateur {
    + id : int
    + login: String 
    + password: String 
}
}

Personne <|-- Formateur
Personne <|-- Apprenant
Utilisateur "1" <-- "1" Formateur : "compte"
Utilisateur "1" <-- "1" Apprenant : "compte"